# bywind

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml
bywind-cli/: Cargo.toml  README.md
bywind-cli/src/: convert.rs  display.rs  error.rs  fetch.rs  info.rs  inspect.rs  main.rs  parsing.rs  search.rs  tune.rs  tune_trial.rs
bywind-dev/: Cargo.toml
bywind-dev/src/: lib.rs
bywind-viz/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.html
bywind-viz/assets/: manifest.json  sw.js
bywind-viz/src/: app.rs  bundled_sample.rs  coastlines.rs  config.rs  draw.rs  fetch.rs  io.rs  main.rs  search.rs  tools.rs  ui.rs  view.rs
bywind-viz/src/ui/: central.rs  dialogs.rs  menu.rs  panels.rs
examples/: fetch_gfs.rs  grib2_inspect.rs
profiling/: .gitignore  baseline.md  stage2-counters.md  topology-comparison.md
profiling/large/: config.toml
profiling/small/: config.toml
profiling/tuning/: _search.toml
profiling/tuning/archipelago/: config.toml
profiling/tuning/coastal-detour/: config.toml
profiling/tuning/mid-atlantic/: config.toml
profiling/tuning/mid-pacific/: config.toml
profiling/tuning/short-easy/: config.toml
profiling/tuning/transoceanic-atlantic/: config.toml
profiling/tuning/transoceanic-pacific/: config.toml
src/: auto_bounds.rs  baked_codec.rs  bounds.rs  config.rs  fetch.rs  fmt.rs  grib2.rs  io.rs  landmass.rs  lib.rs  metrics.rs  route.rs  scenario.rs  search.rs  solution.rs  wind_map.rs
src/tests/: mod.rs
src/wind_av1/: decoder.rs  encoder.rs  ivf.rs  mod.rs  rav1d_wrap.rs
swarmkit-sailing/: Cargo.toml  README.md
swarmkit-sailing/src/: boat.rs  boundary.rs  dynamics.rs  fit.rs  init.rs  lib.rs  mutation.rs  path_baseline.rs  profile_timers.rs  range_cache.rs  route_bounds.rs  spherical.rs  spherical_pso.rs  time.rs  traits.rs  units.rs
swarmkit-sailing/src/units/: path.rs
swarmkit-sailing/tests/: landmass_avoidance.rs  lbest_topology.rs  multi_baseline_init.rs  niched_topology.rs  probe_stats.rs  sailing_smoke.rs
swarmkit-sailing/tests/common/: mod.rs
tests/: topology_smoke.rs
